syntax = "proto3";

option optimize_for = LITE_RUNTIME;

message vec4_proto_mssg
{
	float	x	= 1;
	float	y	= 2;
	float	z	= 3;
	float	w	= 4;
}